--- a/index.html
+++ b/index.html
@@ -3,10 +3,22 @@
 <head>
 <meta name="viewport" content="width=640px, initial-scale=.5, maximum-scale=.5" />
 <title>MEOW</title>
+<style>
+div {
+  width: 1024px;
+}
+
+img {
+  width: 100%;
+}
+</style>
 </head>
 
 <body>
-<img style="width: 100%;" src="http://2.bp.blogspot.com/-VQJMK8PRnI0/UjYaglEkV5I/AAAAAAAAACg/N2MkW6iorr0/s1600/30192_1600x1200-4-cute-cats.jpg" />
+
+<div>
+<img  src="http://2.bp.blogspot.com/-VQJMK8PRnI0/UjYaglEkV5I/AAAAAAAAACg/N2MkW6iorr0/s1600/30192_1600x1200-4-cute-cats.jpg" />
+</div>
 </body>
 
 </html>
