--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta name="viewport" content="width=640px, initial-scale=.5, maximum-scale=.5" />
+<meta name="viewport" content="width=640px, initial-scale=1, maximum-scale=.5" />
 <title>MEOW</title>
 <style>
 div {
