--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta name="viewport" content="width=640px, initial-scale=1, maximum-scale=.5" />
+<meta name="viewport" content="width=640px, initial-scale=1, maximum-scale=2" />
 <title>MEOW</title>
 <style>
 div {
@@ -19,6 +19,8 @@ img {
 <div>
 <img  src="http://2.bp.blogspot.com/-VQJMK8PRnI0/UjYaglEkV5I/AAAAAAAAACg/N2MkW6iorr0/s1600/30192_1600x1200-4-cute-cats.jpg" />
 </div>
+
+<p>hellow</p>
 </body>
 
 </html>
