--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <title>MEOW</title>
 <style>
 div {
-  width: 1024px;
+  width: 100%;
 }
 
 img {
@@ -20,7 +20,7 @@ img {
 <img  src="http://2.bp.blogspot.com/-VQJMK8PRnI0/UjYaglEkV5I/AAAAAAAAACg/N2MkW6iorr0/s1600/30192_1600x1200-4-cute-cats.jpg" />
 </div>
 
-<p>hellow2</p>
+<p>hellow 3</p>
 </body>
 
 </html>
