--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ img {
 <img  id='imageId' src="http://2.bp.blogspot.com/-VQJMK8PRnI0/UjYaglEkV5I/AAAAAAAAACg/N2MkW6iorr0/s1600/30192_1600x1200-4-cute-cats.jpg" />
 </div>
 
-<p>hellow 4 </p>
+<p>hellow 5 </p>
 
 
 
@@ -32,13 +32,13 @@ image.addEventListener('gesturechange',function(e){
 
     if(e.scale>1){
         
-        image.style.width = 200%;
+        image.style.width = '200%';
     }
 
     else if(e.scale<1){
         //zoom out 
         //decrease the size of image according to the e.scale
-        image.style.width = 50%;
+        image.style.width = '50%';
     }
 });
 </script>
