--- a/index.html
+++ b/index.html
@@ -4,43 +4,111 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=20" />
 <title>MEOW</title>
 <style>
-div {
-  width: 100%;
+
+
+body, html {
+    margin:0;
+    padding:0;
+    width:100%;
+    height:100%;    
+    font-family:sans-serif;
+    font-size:1em;
+    line-height:1.5em;
 }
 
-img {
-  width: 100%;
+.wrapper {
+    width:100%;
+    height:100%;
+    position: relative;
+    display: table;
 }
+
+.wrap {
+    display: table-cell;
+    vertical-align: middle;
+    text-align: center;
+}
+
+#square {
+    width:100px;
+    height:100px;
+    background:blue;
+    margin:0 auto;
+}
+
+
 </style>
 </head>
 
 <body>
 
-<div>
+<!-- <div>
 <img  id='imageId' src="http://2.bp.blogspot.com/-VQJMK8PRnI0/UjYaglEkV5I/AAAAAAAAACg/N2MkW6iorr0/s1600/30192_1600x1200-4-cute-cats.jpg" />
 </div>
 
 <p>hellow 5 </p>
+ -->
 
+
+<div class="wrapper">
+    <div class="wrap">
+        <div id="square"></div>
+    </div>
+</div>
 
 
 <script type="text/javascript">
 
-var image=document.getElementById('imageId');
 
-image.addEventListener('gesturechange',function(e){
+var dom = document.body,
+    _width = parseInt($('#square').css('width')),
+    vel = 5.0,
+    min = _width,
+    max = 300,
+    scale;
 
-    if(e.scale>1){
+dom.addEventListener("gesturechange", gestureChange, false);
+dom.addEventListener("gestureend", gestureEnd, false);
+
+function gestureChange(e) {
+
+    e.preventDefault();
+
+    scale = e.scale;
+    var tempWidth = _width * scale;
+
+    if (tempWidth > max) tempWidth = max;
+    if (tempWidth < min) tempWidth = min;
+
+    $('#square').css({
+        'width': tempWidth + 'px',
+        'height': tempWidth + 'px'
+    });
+}
+
+function gestureEnd(e) {
+
+    e.preventDefault();
+    _width = parseInt($('#square').css('width'));
+}
+
+
+
+// var image=document.getElementById('imageId');
+
+// image.addEventListener('gesturechange',function(e){
+
+//     if(e.scale>1){
         
-        image.style.width = '200%';
-    }
+//         image.style.width = '200%';
+//     }
 
-    else if(e.scale<1){
-        //zoom out 
-        //decrease the size of image according to the e.scale
-        image.style.width = '50%';
-    }
-});
+//     else if(e.scale<1){
+//         //zoom out 
+//         //decrease the size of image according to the e.scale
+//         image.style.width = '50%';
+//     }
+// });
 </script>
 
 
