--- a/test.html
+++ b/test.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=20" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>MEOW</title>
 <style>
 
@@ -14,11 +14,6 @@
 <script type="text/javascript" src="http://stagingcdn2.republicproject.com/frontend/v4.1/serve.js?p=21589&click_macro=[ESCAPED_CLICKURL]&cache_buster=[TIMESTAMP]" class="rpploader"></script>
 <noscript><a href="" target="_blank"><img src="http://stagingcdn2.republicproject.com/creatives/20001-21000/20885/units/2938/assets/homescreen.large.portrait.jpg" /></a></noscript>
 
-
-<!-- <script type="text/javascript" src="http://stagingcdn2.republicproject.com/frontend/v4.1/serve.js?p=21589&click_macro=[ESCAPED_CLICKURL]&cache_buster=[TIMESTAMP]" class="rpploader"></script>
-<noscript><a href="" target="_blank"><img src="http://stagingcdn2.republicproject.com/creatives/20001-21000/20885/units/2938/assets/homescreen.large.portrait.jpg" /></a></noscript>
-
- -->
 
 
 </body>
