--- a/zoom.html
+++ b/zoom.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=20" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>MEOW</title>
 <style>
 
@@ -41,13 +41,6 @@ body, html {
 </head>
 
 <body>
-
-<!-- <div>
-<img  id='imageId' src="http://2.bp.blogspot.com/-VQJMK8PRnI0/UjYaglEkV5I/AAAAAAAAACg/N2MkW6iorr0/s1600/30192_1600x1200-4-cute-cats.jpg" />
-</div>
-
-<p>hellow 5 </p>
- -->
 
 
 <div class="wrapper">
