--- a/pinchZoom.html
+++ b/pinchZoom.html
@@ -22,7 +22,18 @@
 
 
 <script type="text/javascript">
-  
+
+var hammertime = Hammer(document.getElementById('pinchzoom'), {
+        transform_always_block: true,
+        transform_min_scale: 1,
+        drag_block_horizontal: false,
+        drag_block_vertical: false,
+        drag_min_distance: 0
+    });
+
+var rect = document.getElementById('rect');
+
+      
 var posX=0, posY=0,
     scale=1, last_scale,
     last_posX=0, last_posY=0,
