--- a/pinchZoom.html
+++ b/pinchZoom.html
@@ -11,7 +11,8 @@
 
 <body>
 
-<script src="//cdnjs.cloudflare.com/ajax/libs/hammer.js/1.0.5/hammer.min.js"></script>
+<!-- <script src="//cdnjs.cloudflare.com/ajax/libs/hammer.js/1.0.5/hammer.min.js"></script> -->
+<script src="http://cdnjs.cloudflare.com/ajax/libs/hammer.js/1.0.5/hammer.min.js"></script>
 
 <div id="pinchzoom">
         <div>
