--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ var myOptions = {
             drag_block_horizontal: true
         };
 var hammertime = new Hammer(myElement);
-hammertime.get('pinch').set({ enable: true });
+// hammertime.get('pinch').set({ enable: true });
 
 console.log('hammer 2 ');
 hammertime.on('pinch', function(ev) {
