--- a/pinch2.html
+++ b/pinch2.html
@@ -10,7 +10,7 @@
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
      <script type="text/javascript" src="./hammer.min.js"></script>
     <!-- // <script type="text/javascript" src="js/main.js"></script> -->
-    <link rel="stylesheet" href="css/style.css" />
+    <!-- <link rel="stylesheet" href="css/style.css" /> -->
 </head>
 <body>
   <div class=contents id="content">
