--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ console.log(myElement);
 var hammertime = new Hammer(myElement);
 hammertime.on('tap', function(ev) {
     console.log(ev);
-    $('#textbox').html("Pinch In");
+    jQuery.('#textbox').html("Pinch In");
 });
 
 
