--- a/index.html
+++ b/index.html
@@ -68,9 +68,10 @@ var myElement = document.getElementById('wrapper');
 console.log(myElement);
 
 var hammertime = new Hammer(myElement);
+
 hammertime.on('tap', function(ev) {
     console.log(ev);
-    jQuery.('#textbox').html("Pinch In");
+    // jQuery.('#textbox').html("Pinch In");
 });
 
 
