--- a/pinch2.html
+++ b/pinch2.html
@@ -7,7 +7,7 @@
 
     <title>Tizen Wearable Web IDE - Tizen Wearable - jQuery</title>
     <!-- // <script type="text/javascript" src="js/jquery-1.9.1.js"></script> -->
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
      <script type="text/javascript" src="./hammer.min.js"></script>
     <!-- // <script type="text/javascript" src="js/main.js"></script> -->
     <!-- <link rel="stylesheet" href="css/style.css" /> -->
