--- a/index.html
+++ b/index.html
@@ -61,6 +61,8 @@ img {width: 100%;}
  -->
 
 <script src="./hammer.min.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+
 
 <script type="text/javascript">
 
@@ -71,7 +73,7 @@ var hammertime = new Hammer(myElement);
 
 hammertime.on('tap', function(ev) {
     console.log(ev);
-    // jQuery.('#textbox').html("Pinch In");
+    jQuery.('#textbox').html("Pinch In");
 });
 
 
