--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ var hammertime = new Hammer(myElement);
 
 hammertime.on('tap', function(ev) {
     console.log(ev);
-    jQuery.('#textbox').html("Pinch In");
+    jQuery('#textbox').html("Pinch In");
 });
 
 
