--- a/index.html
+++ b/index.html
@@ -105,7 +105,11 @@ hammertime.on('pinchout', resize);
 
 function resize (e) {
     console.log(e);
-    jQuery('#textbox').html(e.deltaY);
+    // jQuery('#textbox').html(e.deltaY);
+    hammertime.style.width = parseIint(hammertime.style.width);
+    jQuery('#textbox').html(parseIint(hammertime.style.width));
+
+
 
     // e.preventDefault();
     // e.target.style.webkitTransform =
