--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ function resize (e) {
     var deltaY = e.deltaY;
     var sum = imgWidth + deltaY;
     jQuery('#textbox').html(sum);
-    hammertime.style.width = sum + 'px';
+    myElement.style.width = sum + 'px';
 
 
 
