--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@ p { font-size: 60px;}
         zoom: 2;
 }
 
-body {background-color: cornflowerblue;}
+body {background-color: cornflowerblue;
+    border: 2px solid red;
+    }
 </style>
 </head>
 
