--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@ body {background-color: cornflowerblue;
 
 var myElement = document.getElementById('wrapper');
 var thisBody = document.body;
+var minWidth = jQuery(window).width();
+
 console.log(myElement);
 
 var hammertime = new Hammer(myElement);
@@ -54,7 +56,7 @@ var hammertime = new Hammer(myElement);
 hammertime.get('pinch').set({ enable: true });
 
 
-jQuery('#textbox').html(jQuery(window).width());
+jQuery('#textbox').html(minWidth);
 
 hammertime.on('tap', function(e) {
     var imgWidth = parseInt(getComputedStyle(myElement).width);
@@ -76,6 +78,8 @@ function resize (e) {
     var imgWidth = parseInt(getComputedStyle(myElement).width);
     var deltaY = e.deltaY;
     var total = imgWidth - deltaY;
+    total = (total < minWidth ? minWidth : total);
+
     jQuery('#textbox').html(total);
     myElement.style.width = total + 'px';
     thisBody.style.width = total + 'px';
