--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ function resize (e) {
 
     jQuery('#textbox').html(total);
     myElement.style.width = total + 'px';
-    thisBody.style.width = total + 'px';
+    // thisBody.style.width = total + 'px';
 
 
 
