--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ body {background-color: cornflowerblue;
 </div>
 
 <div id='blue'>
-<p id='textbox'>hellow 8</p>
+<p id='textbox'>hellow 9</p>
 </div>
 
 
@@ -55,6 +55,7 @@ var hammertime = new Hammer(myElement);
 
 hammertime.get('pinch').set({ enable: true });
 
+hammertime.get('swipe').set({ enable: false });
 
 // jQuery('#textbox').html(minWidth);
 
