--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ var hammertime = new Hammer(myElement);
 
 hammertime.get('pinch').set({ enable: true });
 
-hammertime.get('swipe').set({ enable: false });
+hammertime.get('tap').set({ enable: false });
 
 // jQuery('#textbox').html(minWidth);
 
