--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@ body {background-color: cornflowerblue;
 
 <body>
 
-<div>
-    <img  id='wrapper' src="http://2.bp.blogspot.com/-VQJMK8PRnI0/UjYaglEkV5I/AAAAAAAAACg/N2MkW6iorr0/s1600/30192_1600x1200-4-cute-cats.jpg" />
+<div id='wrapper' >
+    <img id='targetImg' src="http://2.bp.blogspot.com/-VQJMK8PRnI0/UjYaglEkV5I/AAAAAAAAACg/N2MkW6iorr0/s1600/30192_1600x1200-4-cute-cats.jpg" />
 </div>
 
 <div id='blue'>
@@ -45,7 +45,7 @@ body {background-color: cornflowerblue;
 
 <script type="text/javascript">
 
-var myElement = document.getElementById('wrapper');
+var myElement = document.getElementById('targetImg');
 var thisBody = document.body;
 var minWidth = jQuery(window).width();
 
@@ -90,9 +90,6 @@ function resize (e) {
 
 
 
-    // e.preventDefault();
-    // e.target.style.webkitTransform =
-    //     'scale(' + e.scale  + startScale  + ')
 };
 
 // var myElement = document.getElementById('wrapper');
