--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@ p { font-size: 60px;}
 body {background-color: cornflowerblue;
     border: 2px solid red;
     }
+
+#wrapper {
+    border: 2px solid yellow;
+}
+
 </style>
 </head>
 
