--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@ body {background-color: cornflowerblue;
 
 #wrapper {
     border: 2px solid yellow;
+    overflow: scroll;
 }
 
 </style>
@@ -40,7 +41,7 @@ body {background-color: cornflowerblue;
 </div>
 
 <div id='blue'>
-<p id='textbox'>hellow 10</p>
+<p id='textbox'>hellow 11</p>
 </div>
 
 
@@ -61,6 +62,7 @@ var hammertime = new Hammer(myElement);
 hammertime.get('pinch').set({ enable: true });
 
 hammertime.get('tap').set({ enable: false });
+hammertime.get('pan').set({ enable: false });
 hammertime.get('press').set({ enable: false });
 hammertime.get('rotate').set({ enable: false });
 hammertime.get('swipe').set({ enable: false });
