--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ body {background-color: cornflowerblue;
 
 #wrapper {
     border: 2px solid yellow;
-    overflow: scroll;
+    overflow: auto;
 }
 
 </style>
@@ -41,7 +41,7 @@ body {background-color: cornflowerblue;
 </div>
 
 <div id='blue'>
-<p id='textbox'>hellow 11</p>
+<p id='textbox'>hellow 10 </p>
 </div>
 
 
