--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ body {background-color: cornflowerblue;
 </div>
 
 <div id='blue'>
-<p id='textbox'>hellow 10 </p>
+<p id='textbox'>hellow 11 </p>
 </div>
 
 
@@ -51,7 +51,7 @@ body {background-color: cornflowerblue;
 
 <script type="text/javascript">
 
-var myElement = document.getElementById('targetImg');
+var myElement = document.getElementById('wrapper');
 var thisBody = document.body;
 var minWidth = jQuery(window).width();
 
