--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ body {background-color: cornflowerblue;
 </div>
 
 <div id='blue'>
-<p id='textbox'>hellow 11 </p>
+<p id='textbox'>hellow 12 </p>
 </div>
 
 
@@ -56,6 +56,9 @@ var thisBody = document.body;
 var minWidth = jQuery(window).width();
 
 console.log(myElement);
+
+
+Hammer.defaults.behavior.touchAction = 'pan-y';
 
 var hammertime = new Hammer(myElement);
 
