--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ body {background-color: cornflowerblue;
 </div>
 
 <div id='blue'>
-<p id='textbox'>hellow 22 </p>
+<p id='textbox'>hellow 11 </p>
 </div>
 
 
@@ -72,7 +72,7 @@ hammertime.get('rotate').set({ enable: false });
 
 // jQuery('#textbox').html(minWidth);
 
-hammertime.on('swipe', function(e) {
+hammertime.on('pan', function(e) {
     // var imgWidth = parseInt(getComputedStyle(myElement).width);
     var deltaY = e.deltaY;
     jQuery('#textbox').html(deltaY);
