--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ body {background-color: cornflowerblue;
 </div>
 
 <div id='blue'>
-<p id='textbox'>hellow 11 </p>
+<p id='textbox'>hellow 33 </p>
 </div>
 
 
@@ -65,7 +65,7 @@ var hammertime = new Hammer(myElement);
 hammertime.get('pinch').set({ enable: true });
 
 hammertime.get('tap').set({ enable: false });
-hammertime.get('pan').set({ enable: false });
+// hammertime.get('pan').set({ enable: false });
 hammertime.get('press').set({ enable: false });
 hammertime.get('rotate').set({ enable: false });
 // hammertime.get('swipe').set({ enable: false });
