--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ body {background-color: cornflowerblue;
 </div>
 
 <div id='blue'>
-<p id='textbox'>hellow 22 </p>
+<p id='textbox'>hellow 33 </p>
 </div>
 
 
@@ -96,7 +96,7 @@ function resize (e) {
 
     jQuery('#textbox').html(total);
     myElement.style.width = total + 'px';
-    // thisBody.style.width = total + 'px';
+    thisBody.style.width = total + 'px';
 
 
 
