--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@ body {
 #wrapper {
     border: 2px solid yellow;
     position: relative;
+    height: 100%;
 }
 
 #targetImg {
@@ -53,7 +54,7 @@ body {
 </div>
 
 <div id='blue'>
-<p id='textbox'>hellow 22 </p>
+<p id='textbox'>hellow 11 </p>
 </div>
 
 
