--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ body {
 }
 
 #targetImg {
-    position: absolute;
+    position: relative;
     top: 0;
     left: 0;
 }
@@ -54,7 +54,7 @@ body {
 </div>
 
 <div id='blue'>
-<p id='textbox'>hellow 11 </p>
+<p id='textbox'>hellow aa </p>
 </div>
 
 
