--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ body {
 </div>
 
 <div id='blue'>
-<p id='viewportP'>hellow ss </p>
+<p id='viewportP'>hellow aa </p>
 <p id='widthImg'>hellow aa </p>
 <p id='lefpos'>hellow aa </p>
 </div>
@@ -118,12 +118,20 @@ hammertime.on('pinch', resize);
 function resize (e) {
     var imgWidth = parseInt(getComputedStyle(myElement).width);
     var deltaY = e.deltaY;
-    var total = imgWidth - deltaY;
-    total = (total < minWidth ? minWidth : total);
+    var newWidth = imgWidth - deltaY;
 
-    jQuery('#textbox').html(total);
-    myElement.style.width = total + 'px';
-    thisBody.style.width = total + 'px';
+    var minZoom = viewportWidth;
+    var maxZoom = viewportWidth * 3;
+
+    if( newWidth < minZoom) {
+        newWidth = minZoom;
+    } else if (newWidth > maxZoom) {
+        newWidth = maxZoom;
+    }
+
+    jQuery('#textbox').html(newWidth);
+    myElement.style.width = newWidth + 'px';
+    thisBody.style.width = newWidth + 'px';
 
 
 
