--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ body {
 </div>
 
 <div id='blue'>
-<p id='viewportP'>hellow sss </p>
+<p id='viewportP'>hellow qqq </p>
 <p id='widthImg'>hellow aa </p>
 <p id='lefpos'>hellow aa </p>
 </div>
@@ -130,7 +130,17 @@ function resize (e) {
         newWidth = minZoom;
     } else if (newWidth > maxZoom) {
         newWidth = maxZoom;
-        hammertime.trigger('pan', panImage);
+
+        //Corner case: Zooming-in and edge is revealed
+        var maxX = viewportWidth - imgWidth;
+        var posLeft = parseInt(getComputedStyle(targetImg).left);
+
+        if (posLeft < maxX) {
+            posLeft = maxX;
+            targetImg.style.left = posLeft + 'px';
+        }
+
+
     }
 
     jQuery('#textbox').html(newWidth);
